style.css bijgwerkt

--- a/src/index.html
+++ b/src/index.html
@@ -82,6 +82,16 @@
                 </button>
               </li>
             -->
+              <li class="order">
+                <span class="order__name">
+                  <span class="order__amount">1x </span>
+                  Oat Latte
+                </span>
+                <span>
+                  <span class="order__price">&euro;3,50</span>
+                  <button class="remove">x</button>
+                </span>
+              </li>
         </ul>
         <p class="total">
           <span class="total__label">Total price</span>
