--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
         <h1 class="h1-like">What do you want to order?</h1>
       </div>
     </header>
+    <section>
+
+    </section>
     <section class="prices highlight spaced">
       <h2 class="visually-hidden">Price list</h2>
       <ul class="prices__list">
@@ -110,6 +113,22 @@
         </span>
       </div>
     </section>
+    <footer class="footer">
+      <ul class="footer_nav">
+        <li class="nav_element">
+          <img src="./assets/img/home.svg" alt="home">
+          <a class="footer_link footer_home footer-active" href="index.html">Home</a>
+        </li>
+        <li  class="nav_element">
+          <img src="./assets/img/about.svg" alt="about">
+          <a class="footer_link footer_about" href="index.html">About</a>
+        </li>
+        <li  class="nav_element">
+          <img src="./assets/img/admin.svg" alt="admin">
+          <a class="footer_link footer_admin" href="index.html">Admin</a>
+        </li>
+      </ul>
+    </footer>
   </main>
 </body>
 
