--- a/src/index.html
+++ b/src/index.html
@@ -12,107 +12,98 @@
   <main class="layout">
     <header class="header highlight spaced">
       <div class="header__titles">
-        <a class="h2-like">
-          The Plant-Based Barista
-        </a>
+        <a class="h2-like">The Plant-Based Barista</a>
         <h1 class="h1-like">What do you want to order?</h1>
       </div>
     </header>
-    <section>
-
-    </section>
+    <img class="header_image" src="./assets/img/plan-based-coffee@2x.png" alt="logo" height="71" width="132">
     <section class="prices highlight spaced">
-      <h2 class="visually-hidden">Price list</h2>
-      <ul class="prices__list">
-        <!--
-          TEMPLATE
-          <li class="price">
-            <a class="price__button">
-              <span class="price__button__wrapper">
-                <span class="price__button__name">Drink name</span>
-                <span class="price__button__amount">&euro; 3,00</span>
-              </span>
-              <span class="price__button__plus">+</span>
-            </a>
-          </li>
-        -->
+            <h2 class="visually-hidden">Price list</h2>
+            <ul class="prices__list">
+              <!--
+                TEMPLATE
+                <li class="price">
+                  <a class="price__button">
+                    <span class="price__button__wrapper">
+                      <span class="price__button__name">Drink name</span>
+                      <span class="price__button__amount">&euro; 3,00</span>
+                    </span>
+                    <span class="price__button__plus">+</span>
+                  </a>
+                </li>
+              -->
 
-          <li class="price">
-            <a class="price__button">
-              <span class="price__button__wrapper">
-                <span class="price__button__name">Oat Latte</span>
-                <span class="price__button__amount">&euro; 3,50</span>
-              </span>
-              <span class="price__button__plus">+</span>
-            </a>
-          </li>
+                <li class="price">
+                  <a class="price__button">
+                    <span class="price__button__wrapper">
+                      <span class="price__button__name">Oat Latte</span>
+                      <span class="price__button__amount">&euro; 3,50</span>
+                    </span>
+                    <span class="price__button__plus">+</span>
+                  </a>
+                </li>
 
-          <li class="price">
-            <a class="price__button">
-              <span class="price__button__wrapper">
-                <span class="price__button__name">Oat Latte</span>
-                <span class="price__button__amount">&euro; 3,50</span>
-              </span>
-              <span class="price__button__plus">+</span>
-            </a>
-          </li>
+                <li class="price">
+                    <a class="price__button">
+                      <span class="price__button__wrapper">
+                        <span class="price__button__name">Oat Latte</span>
+                        <span class="price__button__amount">&euro; 3,50</span>
+                      </span>
+                      <span class="price__button__plus">+</span>
+                    </a>
+                  </li>
 
-          <li class="price">
-            <a class="price__button">
-              <span class="price__button__wrapper">
-                <span class="price__button__name">Oat Latte</span>
-                <span class="price__button__amount">&euro; 3,50</span>
-              </span>
-              <span class="price__button__plus">+</span>
-            </a>
-          </li>
+                <li class="price">
+                  <a class="price__button">
+                    <span class="price__button__wrapper">
+                      <span class="price__button__name">Oat Latte</span>
+                      <span class="price__button__amount">&euro; 3,50</span>
+                    </span>
+                    <span class="price__button__plus">+</span>
+                  </a>
+                </li>
 
-      </ul>
+                <li class="price">
+                  <a class="price__button">
+                    <span class="price__button__wrapper">
+                      <span class="price__button__name">Oat Latte</span>
+                      <span class="price__button__amount">&euro; 3,50</span>
+                    </span>
+                    <span class="price__button__plus">+</span>
+                  </a>
+                </li>
+
+            </ul>
     </section>
-    <section class="content spaced">
-      <h2 class="title_mini">Order</h2>
-      <div class="orders__wrapper hide">
-        <ul class="orders">
-          <!--
-              Order template
-              <li class="order">
-                <span class="order__name">
-                  <span class="order__amount">{amount} x</span> {drink.name}
-                </span>
-                <span class="order__price">&euro; {total}</span>
-                <button class="remove">
-                  x
-                </button>
-              </li>
-            -->
-              <li class="order">
-                <span class="order__name">
-                  <span class="order__amount">1x </span>
-                  Oat Latte
-                </span>
-                <span>
-                  <span class="order__price">&euro;3,50</span>
-                  <button class="remove">x</button>
-                </span>
-              </li>
-        </ul>
-        <p class="total">
-          <span class="total__label">Total price</span>
-          <span class="total__price">&euro; <span>0,00</span></span>
-        </p>
-      </div>
-      <div class="emptystate">
-        <img srcset="./assets/img/coffee-maker.jpg 67w,
-          ./assets/img/coffee-maker@2x.jpg 134w" sizes="67px" src="./assets/img/coffee-maker.jpg" alt="A coffee maker">
-
-        <span class="emptystate__content">
-          Please order something
-          <span role="img" aria-label="Drunk emoji">
-            🤪
-          </span>
-        </span>
-      </div>
+    <section class="section_orders content">
+            <h2 class="title_mini">Order</h2>
+            <div class="orders__wrapper hide">
+              <ul class="orders">
+                    <li class="order">
+                      <span class="order__name">
+                        <span class="order__amount">1x </span>
+                        Oat Latte
+                      </span>
+                      <span>
+                        <span class="order__price">&euro;3,50</span>
+                        <button class="remove">x</button>
+                      </span>
+                    </li>
+              </ul>
+              <p class="total">
+                <span class="total__label">Total price</span>
+                <span class="total__price">&euro; <span>0,00</span></span>
+              </p>
+            </div>
+        <!--<div class="emptystate">
+              <img srcset="./assets/img/coffee-maker.jpg 67w, ./assets/img/coffee-maker@2x.jpg 134w" sizes="67px" src="./assets/img/coffee-maker.jpg" alt="A coffee maker">
+              <span class="emptystate__content">
+                Please order something
+                <span role="img" aria-label="Drunk emoji">🤪</span>
+              </span>
+            </div>-->
     </section>
+
     <footer class="footer">
       <ul class="footer_nav">
         <li class="nav_element">
@@ -131,5 +122,4 @@
     </footer>
   </main>
 </body>
-
 </html>
