--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,22 @@
         <a class="h2-like">The Plant-Based Barista</a>
         <h1 class="h1-like">What do you want to order?</h1>
       </div>
+      <picture class="header_image"><source
+        srcset="./assets/img/plan-based-coffee@2x_result.webp"
+        sizes="12w"
+        type="image/webp"
+      />
+      <source
+        srcset="./assets/img/plan-based-coffee@2x_result.webp"
+        sizes="102w"
+        type="image/webp"
+      />
+      <img class="header_image"
+        srcset="./assets/img/plan-based-coffee@2x.png"
+        alt="kop logo"
+      /></picture>
     </header>
-    <img class="header_image" src="./assets/img/plan-based-coffee@2x.png" alt="logo" height="71" width="132">
+
     <section class="prices highlight spaced">
             <h2 class="visually-hidden">Price list</h2>
             <ul class="prices__list">
@@ -95,13 +109,13 @@
                 <span class="total__price">&euro; <span>0,00</span></span>
               </p>
             </div>
-        <!--<div class="emptystate">
+        <div class="emptystate">
               <img srcset="./assets/img/coffee-maker.jpg 67w, ./assets/img/coffee-maker@2x.jpg 134w" sizes="67px" src="./assets/img/coffee-maker.jpg" alt="A coffee maker">
               <span class="emptystate__content">
                 Please order something
                 <span role="img" aria-label="Drunk emoji">🤪</span>
               </span>
-            </div>-->
+            </div>
     </section>
 
     <footer class="footer">
