--- a/src/index.html
+++ b/src/index.html
@@ -34,28 +34,13 @@
     <section class="prices highlight spaced">
             <h2 class="visually-hidden">Price list</h2>
             <ul class="prices__list">
-              <!--
-                TEMPLATE
-                <li class="price">
-                  <a class="price__button">
-                    <span class="price__button__wrapper">
-                      <span class="price__button__name">Drink name</span>
-                      <span class="price__button__amount">&euro; 3,00</span>
-                    </span>
-                    <span class="price__button__plus">+</span>
-                  </a>
-                </li>
-              -->
-
-                
-
             </ul>
     </section>
     <section class="section_orders content">
             <h2 class="title_mini">Order</h2>
             <div class="orders__wrapper hide">
               <ul class="orders">
-                    <li class="order">
+              <!--<li class="order">
                       <span class="order__name">
                         <span class="order__amount">1x </span>
                         Oat Latte
@@ -64,7 +49,7 @@
                         <span class="order__price">&euro;3,50</span>
                         <button class="remove">x</button>
                       </span>
-                    </li>
+                    </li>-->
               </ul>
               <p class="total">
                 <span class="total__label">Total price</span>
